Secretaria add e acesso rapido

--- a/main.html
+++ b/main.html
@@ -624,6 +624,13 @@
               >
                 Imagens Institucionais
               </button>
+              <button
+                class="tab-button py-4 px-6 font-medium text-gray-600 hover:text-blue-900 flex-shrink-0 text-center"
+                data-tab="acesso-rapido"
+              >
+                Acesso Rápido
+              </button>
+
             </div>
 
             <!-- Right Arrow -->
@@ -1313,6 +1320,130 @@
               </a>
             </div>
           </div>
+
+          <!-- Tab Content: Acesso Rapido -->
+          <div id="acesso-rapido" class="tab-content p-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+              <a
+                href="https://monitorapetrolina.plataformatarget.com.br/"
+                class="flex items-center p-4 border rounded-lg hover:bg-blue-50 transition duration-200"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-8 w-8 text-blue-500 mr-3"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                  />
+                </svg>
+                <div>
+                  <h4 class="font-medium text-blue-900">Monitora</h4>
+                  <p class="text-sm text-gray-600">Link</p>
+                </div>
+              </a>
+              <a
+                href="https://docs.google.com/spreadsheets/d/1Guvscel1Dn7R9z-F35S0RAVIpkPBpt0I/edit?gid=1454434998#gid=1454434998"
+                class="flex items-center p-4 border rounded-lg hover:bg-blue-50 transition duration-200"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-8 w-8 text-blue-500 mr-3"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                  />
+                </svg>
+                <div>
+                  <h4 class="font-medium text-blue-900">Endereços - 1Doc</h4>
+                  <p class="text-sm text-gray-600">Planilha</p>
+                </div>
+              </a>
+              <a
+                href="https://petrolina.pe.gov.br/"
+                class="flex items-center p-4 border rounded-lg hover:bg-blue-50 transition duration-200"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-8 w-8 text-blue-500 mr-3"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                  />
+                </svg>
+                <div>
+                  <h4 class="font-medium text-blue-900">Prefeitura</h4>
+                  <p class="text-sm text-gray-600">Link</p>
+                </div>
+              </a>
+              <a
+                href="https://petrolina.pe.gov.br/"
+                class="flex items-center p-4 border rounded-lg hover:bg-blue-50 transition duration-200"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-8 w-8 text-blue-500 mr-3"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                  />
+                </svg>
+                <div>
+                  <h4 class="font-medium text-blue-900">Comunicados Oficiais</h4>
+                  <p class="text-sm text-gray-600">Drive</p>
+                </div>
+              </a>
+              <a
+                href="https://petrolina.pe.gov.br/"
+                class="flex items-center p-4 border rounded-lg hover:bg-blue-50 transition duration-200"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-8 w-8 text-blue-500 mr-3"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                  />
+                </svg>
+                <div>
+                  <h4 class="font-medium text-blue-900">Circulares</h4>
+                  <p class="text-sm text-gray-600">Drive</p>
+                </div>
+              </a>
+
+
+
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -1657,6 +1788,70 @@
       </div>
     </section>
 
+    <!-- Secretaria SECTION -->
+
+    <!-- SECRETARIA Section -->
+    <section class="py-16 bg-gray-50">
+      <div class="container mx-auto px-4">
+        <div class="text-center mb-12">
+          <h2 class="text-3xl font-bold text-blue-900 mb-2">
+            Secretaria
+          </h2>
+          <!--
+          <p class="text-gray-600 max-w-2xl mx-auto">
+            Encontre respostas para as dúvidas mais comuns sobre os serviços
+            educacionais.
+          </p>
+          -->
+        </div>
+
+        <div class="max-w-5xl mx-auto space-y-6">
+
+          <div class="bg-white rounded-lg shadow-md p-6 border-t-2 flex items-start gap-5">
+            <img 
+              src="./Simao-Durando-Prefeito.jpeg" 
+              class="w-[190px] h-auto object-cover rounded" 
+              alt="Prefeito de Petrolina Simão Durando"
+            >
+            <div class="flex-1 min-w-0">
+              <h2 class="text-xl font-semibold text-blue-900">Simão Amorim Durando Filho</h2>
+              <h3 class="text-lg font-semibold text-blue-900 mt-1">Prefeito Municipal de Petrolina</h3>
+              <p class="text-gray-600 mb-4">
+                Simão Amorim Durando Filho, natural de Petrolina, é filho do ex-prefeito Simão Amorim
+                Durando e de Josefa Durando, casado com Alinne Monteiro Cavalcante Durando e pai de
+                Giovanna e Ana Luh. É bacharel em Publicidade e Marketing pela FATEC de São Paulo e pós-
+                graduado em Gestão Empresarial pela Fundação Dom Cabral. Possui cursos de extensão pelo
+                Instituto Brasiliense de Direito (IDP) nas áreas de Orçamento Público, Gestão de Pessoas e
+                Gestão em Licitações e Contratos. Atuou como secretário parlamentar do deputado federal
+                Fernando Filho na Câmara dos Deputados, diretor do SEST-SENAT de Petrolina, secretário de
+                Governo e Agricultura de Petrolina e vice-prefeito do município. Foi reeleito prefeito de Petrolina
+                em 2024 para o mandato de 2025 a 2029, tendo como vice-prefeito Ricardo Coelho.
+              </p>
+            </div>
+          </div>
+
+          <div class="bg-white rounded-lg shadow-md p-6 border-t-2 flex items-start gap-5">
+            <img 
+              src="./Rosana-Secretária.jpeg" 
+              class="w-[190px] h-auto object-cover rounded" 
+              alt="Prefeito de Petrolina Simão Durando"
+            >
+            <div class="flex-1 min-w-0">
+              <h2 class="text-xl font-semibold text-blue-900">Rosane da Costa Santos</h2>
+              <h3 class="text-lg font-semibold text-blue-900 mt-1">Secretária de Educação, Cultura e Esporte</h3>
+              <p class="text-gray-600 mb-4">
+                Natural de Casa Nova (BA), é pedagoga, especialista em Gestão Escolar e professora efetiva
+                das Redes Municipais de Petrolina e Juazeiro. Na Rede Municipal de Petrolina atua há 12 anos,
+                foi professora substituta e efetiva, coordenadora pedagógica, gestora escolar, tutora de
+                gestão escolar, secretária executiva de ensino e secretária executiva de administração. Desde
+                2022 é a Secretária Municipal de Educação, Cultura e Esporte de Petrolina.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contato" class="py-16 bg-blue-900 text-white">
       <div class="container mx-auto px-4">
@@ -1904,9 +2099,9 @@
               </li>
               <li>
                 <a
-                  href="#noticias"
+                  href="#mymaps"
                   class="text-blue-300 hover:text-white transition duration-200"
-                  >Notícias</a
+                  >Tem Escola Aqui</a
                 >
               </li>
               <li>
