fix secretaria section responsividade

--- a/main.html
+++ b/main.html
@@ -2484,7 +2484,7 @@
     <div class="max-w-5xl mx-auto space-y-6">
 
       <!-- Prefeito -->
-      <div class="bg-white rounded-lg shadow-md p-6 border-t-2 flex items-start gap-5">
+      <div class="card-pessoa bg-white rounded-lg shadow-md p-6 border-t-2 flex items-start gap-5">
         <img 
           src="./Simao-Durando-Prefeito.jpeg" 
           class="w-[190px] h-auto object-cover rounded" 
@@ -2508,7 +2508,7 @@
       </div>
 
       <!-- Secretária -->
-      <div class="bg-white rounded-lg shadow-md p-6 border-t-2 flex items-start gap-5">
+      <div class="card-pessoa bg-white rounded-lg shadow-md p-6 border-t-2 flex items-start gap-5">
         <img 
           src="./Rosana-Secretária.jpeg" 
           class="w-[190px] h-auto object-cover rounded" 
