--- a/main.html
+++ b/main.html
@@ -2163,7 +2163,7 @@
 
           <div class="bg-blue-50 p-6">
             <h4 class="text-lg font-semibold text-blue-900 mb-4">
-              Próximos Eventos
+              Eventos do mês
             </h4>
 
             <div class="space-y-4" id="proximos-eventos"></div>
