--- a/main.html
+++ b/main.html
@@ -747,6 +747,31 @@
                   <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
+              <a
+                href="https://drive.google.com/file/d/1hczH724YernQGEZNCyLAyme1SndY7dB_/view"
+                class="flex items-center p-4 border rounded-lg hover:bg-blue-50 transition duration-200"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-8 w-8 text-blue-500 mr-3"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                  />
+                </svg>
+                <div>
+                  <h4 class="font-medium text-blue-900">
+                    Regulamento Geral Jogos Escolares
+                  </h4>
+                  <p class="text-sm text-gray-600">PDF</p>
+                </div>
+              </a>
             </div>
           </div>
 
