--- a/main.html
+++ b/main.html
@@ -1627,7 +1627,7 @@
           <div id="imagens-institucionais" class="tab-content p-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
               <a
-                href="https://drive.google.com/file/d/1cS8GhpYMc1P63VLbxFozo0NapWujogQT/view?usp=sharing"
+                href="https://drive.google.com/drive/folders/14Hj7OVjwMe7UIWypzyJrUiUwcdqcBydL?usp=sharing"
                 class="flex items-center p-4 border rounded-lg hover:bg-blue-50 transition duration-200"
               >
                 <svg
@@ -3074,21 +3074,21 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="https://petrolina.1doc.com.br/b.php?pg=o/login&n=3"
                   class="text-blue-300 hover:text-white transition duration-200"
                   >1Doc</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="https://doem.org.br/pe/Petrolina"
                   class="text-blue-300 hover:text-white transition duration-200"
                   >Diário Oficial</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="https://docs.google.com/spreadsheets/d/1k1kTzrbzexEt8riTqrfdU2xdgjJtsjmC/edit?usp=sharing&ouid=105196694340451053010&rtpof=true&sd=true"
                   class="text-blue-300 hover:text-white transition duration-200"
                   >Contatos SEDUCE</a
                 >
